--- a/index.html
+++ b/index.html
@@ -7,23 +7,73 @@
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light margin">
             <a class="navbar-brand" href="#">
-                <img src="img/global labs.jpg" width="220" height="80"/>
+                <img src="img/global labs.png" width="220" height="80"/>
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quem somos</a>
+                        <a class="nav-link" href="#quemsomos">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parceiros</a>
+                        <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
+                        <a class="nav-link" href="#servicos">Serviços</a>
                     </li>
                 </ul>
             </div>
         </nav>
+
+        <section id="quemsomos">
+            <div class="container-fluid quemsomos text-center margin">
+                <h3 class="margin">Quem somos</h3>
+                <img class="rounded-circle" src="img/time.jpeg" width="400" height="400"/>
+                <h3>Somos um time comprometido com os resultados</h3>
+            </div>
+        </section>
+
+        <section id="parceiros">
+            <div class="container-fluid text-center margin parceiros">
+                <h3 class="margin">Parceiros</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/dio.png" width="100%"/>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/dio.png" width="100%"/>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/dio.png" width="100%"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+                <h3 class="margin">Serviços</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu gravida massa. </p>
+                            <img src="img/site1.jpeg" width="100%"/>
+                        </div>
+                        <div class="col-lg-6">
+                            <p>
+                                Quisque tortor nisl, molestie sed diam ut, hendrerit iaculis odio. Phasellus sit amet rutrum purus. Ut sit amet dapibus quam.
+                            </p>
+                            <img src="img/app.jpg" width="100%"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>Desenvolvido por Jonas Palhanos</p>
+    </footer>
 </html>
